public/css/styles.css
/* ... */
@media (min-width: 992px) {
  .masthead {
    padding-top: calc(6rem + 104px);
    padding-bottom: 6rem;
  }
  .masthead .masthead-heading {
    font-size: 4rem;
    line-height: 3.5rem;
  }
  .masthead .masthead-subheading {
    font-size: 1.5rem;
  }
}
.portfolio .portfolio-item {
  cursor: pointer;
  position: relative;
  display: block;
  max-width: 25rem;
  border-radius: 0.5rem;
  overflow: hidden;
}
.portfolio .portfolio-item .portfolio-item-caption {
  position: absolute;
  top: 0;
  left: 0;
  transition: all 0.2s ease-in-out;
  opacity: 0;
  background-color: rgba(31, 45, 65, 0.9);
}
.portfolio .portfolio-item .portfolio-item-caption:hover {
  opacity: 1;
}
.portfolio
  .portfolio-item
  .portfolio-item-caption
  .portfolio-item-caption-content {
  font-size: 1.5rem;
}

.portfolio-modal .portfolio-modal-title {
  font-size: 2.25rem;
  line-height: 2rem;
}
@media (min-width: 992px) {
  .portfolio-modal .portfolio-modal-title {
    font-size: 3rem;
    line-height: 2.5rem;
  }
}
.portfolio-modal .close {
  position: absolute;
  z-index: 1;
  right: 1.5rem;
  top: 1rem;
  font-size: 3rem;
  line-height: 3rem;
  color: #1f2d41;
  opacity: 1;
}

.floating-label-form-group {
  position: relative;
  border-bottom: 1px solid #e9ecef;
}
.floating-label-form-group input,
.floating-label-form-group textarea {
  font-size: 1.5em;
  position: relative;
  z-index: 1;
  padding-right: 0;
  padding-left: 0;
  resize: none;
  border: none;
  border-radius: 0;
  background: none;
  box-shadow: none !important;
}
.floating-label-form-group label {
  font-size: 0.85em;
  line-height: 1.764705882em;
  position: relative;
  z-index: 0;
  top: 2em;
  display: block;
  margin: 0;
  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
  -moz-transition: top 0.3s ease, opacity 0.3s ease;
  -ms-transition: top 0.3s ease, opacity 0.3s ease;
  transition: top 0.3s ease, opacity 0.3s ease;
  opacity: 0;
}
.floating-label-form-group:not(:first-child) {
  padding-left: 14px;
  border-left: 1px solid #e9ecef;
}

.floating-label-form-group-with-value label {
  top: 0;
  opacity: 1;
}

.floating-label-form-group-with-focus label {
  color: #1f2d41;
}

form .row:first-child .floating-label-form-group {
  border-top: 1px solid #e9ecef;
}

.footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color: #00cfd5;
  color: #fff;
}

.copyright {
  background-color: #009da2;
}

#brandImage {
  height: 2rem;
}

.portfolio {
  padding-top: 0px;
  padding-bottom: 0px;
}

.padding_top {
  padding-top: 75px;
}

.padding_bottom {
  padding-bottom: 75px;
}

.page-section-heading {
  display: inline-block;
}

.pre {
  white-space: pre;
}

.pre-wrap {
  white-space: pre-wrap;
}

.icon-contact {
  display: flex;
  height: 5rem;
  width: 5rem;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  background-color: #1f2d41;
  color: #fff;
  border-radius: 100%;
}

.navbar-brand img {
  max-width: 13.5rem;
}

.btn-social {
  margin-bottom: 0.5rem;
}

.block {
  display: block;
  margin-right: 5px;
  padding: 6px 12px;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.block2 {
  display: block;
  margin-right: 5px;
  padding: 6px 12px;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  /* color: #495057;
  background-color: #fff; */
  background-clip: padding-box;
  /* border: 0.125rem solid #ced4da;
  border-radius: 0.5rem; */
  /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
}

#creatAccBtn {
  max-width: 13.5rem;
}
#loginAccBtn {
  max-width: 13.5rem;
}
#regPass {
  max-width: 13.5rem;
  display: block;
  margin-top: 8px;
}
#regUser {
  width: 13.5rem;
  display: block;
  align-items: center;
  justify-content: center;
  color: rgb(0, 0, 0);
  display: block;
}
#loginBtn:hover {
  background-color: #1f2d41;
  font-size: small;
  color: white;
}
#loginBtn {
  font-size: small;
}
#register {
  font-size: small;
}
#username {
  width: 125px;
  margin-right: 5px;
  padding: 6px 12px;
  font-size: 0.8rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
#password {
  width: 125px;
  margin-right: 5px;
  padding: 6px 12px;
  font-size: 0.8rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
.mainLogin {
  padding-left: 30px;
}
#truck-list-modal {
  display: inline-block;
}

.card {
  border: none;
}

/* Modal Registration */
#creatModalBtn {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 8px;
  border: 1px solid teal;
  margin-top: 30px;
}
#creatModalBtn:hover {
  background-color: #1f2d41;
  /* font-size: small; */
  color: white;
}

#congrat {
  margin-top: 20px;
}
#createAccount {
  background-color: #009da2;
  color: #fff;
}

